# CompilersProject

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: 00_overview.md  01_interface_spec.md  02_data_structure_spec.md  03_token_grammar_spec.md  04_ir_spec.md  05_test_spec.md  06_weekly_report_template.md  07_meeting_minutes_template.md  08_report_outline.md  09_demo_script.md  10_development_progress.md  10_lex_automata_notes.md  11_known_issues_and_solutions.md  分工与时间参考.md  接口设计与协作文档包.md
include/compiler_project/common/: ast.h  error.h  ir.h  result.h  symbol.h  token.h  type.h
include/compiler_project/lex/: automata.h  lex_parser.h  lexer_runtime.h  regex_parser.h
include/compiler_project/semantic/: ir_builder.h  semantic_action.h  symbol_table.h  type_checker.h
include/compiler_project/yacc/: grammar.h  lr_builder.h  parser_runtime.h  yacc_parser.h
samples/lex/: minic.l
samples/src/err/: bad.mc
samples/src/ok/: demo.mc
samples/yacc/: minic.y
src/common/: ast.c  error.c  ir.c  symbol.c  token.c  type.c
src/lex/: automata.c  lex_parser.c  lexer_runtime.c  regex_parser.c
src/main/: main.c
src/semantic/: ir_builder.c  semantic_action.c  symbol_table.c  type_checker.c
src/yacc/: grammar.c  lr_builder.c  parser_runtime.c  yacc_parser.c
tests/: test_scaffold.c  test_yacc.c
